2018-05-27  Karl Berry  <karl@tug.org>

	* aleph.man,
	* etex.man,
	* luatex.man,
	* mft.man,
	* ptex.man: typos.

2018-04-30  Karl Berry  <karl@tug.org>

	* latex.man: update latexrefman url to
	https://ctan.org/pkg/latex2e-help-texinfo.
	tldoc report from Antoon, 27 Apr 2018 22:15:39.
	Also add more *latex program names as aliases.

2018-02-23  Karl Berry  <karl@freefriends.org>

	* bibtex.man: mention need to remove aux file from previous run
	for -min-crossrefs to be effective.
	https://tex.stackexchange.com/questions/123740

2018-01-18  Karl Berry  <karl@freefriends.org>

	* mf.man: spacing, no openin, per Debian.

2017-01-13  Karl Berry  <karl@tug.org>

	* ofm2opl.man,
	* opl2ofm.man,
	* ovf2ovp.man,
	* ovp2ovf.man: specify section 1. Report from Julian Gilbey.

2016-04-14  Karl Berry  <karl@freefriends.org>

	* ofm2opl.man,
	* ovf2ovp.man: document current options, i.e., from the omfonts
	(../omegafonts) implementation.  Akira re-implemented the web
	-charcode-format option in r39877, ca.27 Feb 2016 10:23:20.

2016-03-08  Karl Berry  <karl@tug.org>

	* ttf2afm.man: document -m.  tldoc mail from esr, 7 Mar 2016 09:34:07.

2015-06-16  Karl Berry  <karl@tug.org>

	* *.man: remove spurious "for troff" and "for nroff" non-comments.
	https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=663157
	Report from Tom Yan, tex-live mail 2 Jun 2015 03:28:32.
	Also replace pseudo-smallcaps M\s-2ETAFONT\s0 with standard "Metafont".
	* *.min: remove these long-gone programs.
	* Makefile.am (EXTRA_DIST): remove *.min.
	(man1_links) [TEX]: include initex.
	(man1_links) [MF]: include inimf.

2015-04-27  Karl Berry  <karl@tug.org>

 	* aleph.man,
	* dvitomp.man,
	* latex.man,
	* luatex.man,
	* mf.man,
	* mpost.man,
	* ofm2opl.man,
	* opl2ofm.man,
	* ovf2ovp.man,
	* ovp2ovf.man,
	* pdfetex.man,
	* pdftex.man,
	* pdftosrc.man,
	* tex.man,
	* ttf2afm.man: version, url, et al. updates.

2014-12-02  Karl Berry  <karl@tug.org>
