@@ -1,6 +1,6 @@
 ## Makefile.am for the TeX Live subdirectory texk/web2c/man/
-##
-## Copyright (C) 2009-2015 Peter Breitenlohner <tex-live@tug.org>
+## Copyright 2018 Karl Berry <tex-live@tug.org>
+## Copyright 2009-2015 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 ##
 man_sources = $(bootstrap_man_sources)
@@ -47,8 +47,14 @@ if PDFTEX
 man_sources += $(pdftex_man_sources)
 man1_links += pdftex:pdflatex
 endif PDFTEX
-EXTRA_DIST += $(pdftex_man_sources)
 pdftex_man_sources = pdftex.man pdftosrc.man ttf2afm.man
+EXTRA_DIST += $(pdftex_man_sources)
+
+if PTEX
+man_sources += ptex.man
+man1_links += ptex:eptex ptex:euptex ptex:uptex
+endif PTEX
+EXTRA_DIST += ptex.man
 
 if LUATEX
 man_sources += luatex.man
